# advance-unix

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
cmake/: AddUnixExperiment.cmake
docs/: BOOK_COVERAGE.md  ENVIRONMENT.md  LEARNING_GUIDE.md
docs/assets/principles/: PROMPTS.md
experiments/: CMakeLists.txt
experiments/01_file_io/: CMakeLists.txt  README.md  main.c
experiments/02_filesystem/: CMakeLists.txt  README.md  main.c
experiments/03_memory_mapping/: CMakeLists.txt  README.md  main.c
experiments/04_file_locking/: CMakeLists.txt  README.md  main.c
experiments/05_process_control/: CMakeLists.txt  README.md  main.c
experiments/06_signals/: CMakeLists.txt  README.md  main.c
experiments/07_threads/: CMakeLists.txt  README.md  main.c
experiments/08_shared_memory/: CMakeLists.txt  README.md  main.c
experiments/09_fd_passing/: CMakeLists.txt  README.md  main.c
experiments/10_tcp_sockets/: CMakeLists.txt  README.md  main.c
experiments/11_event_loop/: CMakeLists.txt  README.md  main.c
experiments/12_filesystem_events/: CMakeLists.txt  README.md  main.c
experiments/13_zero_copy/: CMakeLists.txt  README.md  main.c
experiments/14_resource_limits/: CMakeLists.txt  README.md  main.c
experiments/15_cpu_affinity/: CMakeLists.txt  README.md  main.c
experiments/16_terminal/: CMakeLists.txt  README.md  main.c
experiments/17_pidfd/: CMakeLists.txt  README.md  main.c
experiments/18_message_queue/: CMakeLists.txt  README.md  main.c
experiments/19_file_metadata/: CMakeLists.txt  README.md  main.c
experiments/20_sparse_files/: CMakeLists.txt  README.md  main.c
experiments/21_stdio_buffering/: CMakeLists.txt  README.md  main.c
experiments/22_process_groups/: CMakeLists.txt  README.md  main.c
experiments/23_portable_signals/: CMakeLists.txt  README.md  main.c
experiments/24_thread_specific_data/: CMakeLists.txt  README.md  main.c
experiments/25_fifo/: CMakeLists.txt  README.md  main.c
experiments/26_sysv_message_queue/: CMakeLists.txt  README.md  main.c
experiments/27_posix_aio/: CMakeLists.txt  README.md  main.c
experiments/28_extended_attributes/: CMakeLists.txt  README.md  main.c
experiments/29_memfd_seals/: CMakeLists.txt  README.md  main.c
experiments/30_dynamic_loading/: CMakeLists.txt  README.md  main.c
scripts/: container-build.sh
