# Keep the list explicit so adding or removing a lab is visible in code review.
add_subdirectory(01_file_io)
add_subdirectory(02_filesystem)
add_subdirectory(03_memory_mapping)
add_subdirectory(04_file_locking)
add_subdirectory(05_process_control)
add_subdirectory(06_signals)
add_subdirectory(07_threads)
add_subdirectory(08_shared_memory)
add_subdirectory(09_fd_passing)
add_subdirectory(10_tcp_sockets)
add_subdirectory(11_event_loop)
add_subdirectory(12_filesystem_events)
add_subdirectory(13_zero_copy)
add_subdirectory(14_resource_limits)
add_subdirectory(15_cpu_affinity)
add_subdirectory(16_terminal)
add_subdirectory(17_pidfd)
add_subdirectory(18_message_queue)
add_subdirectory(19_file_metadata)
add_subdirectory(20_sparse_files)
add_subdirectory(21_stdio_buffering)
add_subdirectory(22_process_groups)
add_subdirectory(23_portable_signals)
add_subdirectory(24_thread_specific_data)
add_subdirectory(25_fifo)
add_subdirectory(26_sysv_message_queue)
add_subdirectory(27_posix_aio)
add_subdirectory(28_extended_attributes)
add_subdirectory(29_memfd_seals)
add_subdirectory(30_dynamic_loading)
